--- a/youthtransition/pages/ya-criminaljusticesystem.html
+++ b/youthtransition/pages/ya-criminaljusticesystem.html
@@ -422,7 +422,8 @@
                             <hr/>
                             <div class="row">
                                 <div class="col-12 col-md-6">
-                                    <label class="col-form-label">Are you involved in gang related activity?</label>
+                                    <label class="col-form-label">
+                                        Are you involved in gang related activity?</label>
                                     <fieldset class="form-group">
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label ">
@@ -441,6 +442,13 @@
                                     </fieldset>
                                 </div>
                                 <div class="col-12 col-md-6 pt-2 pt-md-0">
+                                    <label for="criminaljusticesystem.explaingang">
+                                        If Yes, please explain:</label>
+                                    <textarea type="tel" class="form-control"
+                                              id="criminaljusticesystem.explaingang"
+                                              placeholder="Explain"
+                                              formControlName="explaingang"
+                                              rows="3"></textarea>
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
