--- a/youthtransition/pages/ya-demographics.html
+++ b/youthtransition/pages/ya-demographics.html
@@ -242,7 +242,6 @@
                                             Please enter the valid date of birth
                                         </small>
                                     </div>
-
                                 </div>
                                 <div class="col-12 col-md-6 pt-2 pt-md-0">
                                     <label for="demographics.age">Age</label>
@@ -275,14 +274,14 @@
                                 </div> <!-- col-12 -->
                             </div> <!-- form-row -->
                             <hr/>
-                            <!-- Permenancy Goal -->
+                            <!-- Permenancy Plan -->
                             <div class="row">
                                 <div class="col">
-                                    <label for="demographics.permenancygoal">Permenancy Goal</label>
+                                    <label for="demographics.permenancyplan">Permenancy Plan</label>
                                     <textarea type="text" class="form-control form-control-sm"
-                                              id="demographics.permenancygoal"
+                                              id="demographics.permenancyplan"
                                               placeholder="Enter Permenancy Goal" rows="2"
-                                              formControlName="permenancygoal">
+                                              formControlName="permenancyplan">
                                     </textarea>
                                 </div> <!-- col -->
                             </div> <!-- form-row -->
@@ -468,48 +467,50 @@
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
+                            <!-- Beg - Remove Per Doc V13 -->
                             <!-- Mentor Or Identified Supportive Connection -->
-                            <div class="row">
-                                <div class="col-12 col-md-6">
-                                    <label class="col-form-label">Do you have a mentor or identified supportive connection?</label>
-                                    <fieldset class="form-group">
-                                        <div class="form-check form-check-inline">
-                                            <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="mentor" value="yes"
-                                                       formControlName="mentor"> Yes
-                                            </label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="mentor" value="no"
-                                                       formControlName="mentor"> No
-                                            </label>
-                                        </div>
-                                    </fieldset>
-                                </div>
-                                <div class="col-12 col-md-6 pt-2 pt-md-0">
-                                    <label class="col-form-label">If yes, would you like this person to be involved in your transition planning?</label>
-                                    <fieldset class="form-group">
-                                        <div class="form-check form-check-inline">
-                                            <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="transitionplanning" value="yes"
-                                                       formControlName="transitionplanning"> Yes
-                                            </label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="transitionplanning" value="no"
-                                                       formControlName="transitionplanning"> No
-                                            </label>
-                                        </div>
-                                    </fieldset>
-                                </div>
-                            </div> <!-- form-row -->
-                            <hr/>
+                            <!--<div class="row">-->
+                                <!--<div class="col-12 col-md-6">-->
+                                    <!--<label class="col-form-label">Do you have a mentor or identified supportive connection?</label>-->
+                                    <!--<fieldset class="form-group">-->
+                                        <!--<div class="form-check form-check-inline">-->
+                                            <!--<label class="form-check-label">-->
+                                                <!--<input type="radio" class="form-check-input"-->
+                                                       <!--name="mentor" value="yes"-->
+                                                       <!--formControlName="mentor"> Yes-->
+                                            <!--</label>-->
+                                        <!--</div>-->
+                                        <!--<div class="form-check form-check-inline">-->
+                                            <!--<label class="form-check-label">-->
+                                                <!--<input type="radio" class="form-check-input"-->
+                                                       <!--name="mentor" value="no"-->
+                                                       <!--formControlName="mentor"> No-->
+                                            <!--</label>-->
+                                        <!--</div>-->
+                                    <!--</fieldset>-->
+                                <!--</div>-->
+                                <!--<div class="col-12 col-md-6 pt-2 pt-md-0">-->
+                                    <!--<label class="col-form-label">If yes, would you like this person to be involved in your transition planning?</label>-->
+                                    <!--<fieldset class="form-group">-->
+                                        <!--<div class="form-check form-check-inline">-->
+                                            <!--<label class="form-check-label">-->
+                                                <!--<input type="radio" class="form-check-input"-->
+                                                       <!--name="transitionplanning" value="yes"-->
+                                                       <!--formControlName="transitionplanning"> Yes-->
+                                            <!--</label>-->
+                                        <!--</div>-->
+                                        <!--<div class="form-check form-check-inline">-->
+                                            <!--<label class="form-check-label">-->
+                                                <!--<input type="radio" class="form-check-input"-->
+                                                       <!--name="transitionplanning" value="no"-->
+                                                       <!--formControlName="transitionplanning"> No-->
+                                            <!--</label>-->
+                                        <!--</div>-->
+                                    <!--</fieldset>-->
+                                <!--</div>-->
+                            <!--</div> &lt;!&ndash; form-row &ndash;&gt;-->
+                            <!--<hr/>-->
+                            <!-- End - Remove Per Doc V13 -->
                             <!-- COR MDCPS Worker / Transition Worker -->
                             <div class="form-row">
                                 <div class="col-12 col-md-6">
