--- a/youthtransition/pages/ya-placementandsafety.html
+++ b/youthtransition/pages/ya-placementandsafety.html
@@ -234,31 +234,53 @@
                                     <fieldset class="form-group">
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="timeInPlacement" value="zerotosix"
-                                                       formControlName="timeInPlacement"> 0 - 6 months
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="timeInPlacement"
+                                                       value="zerotosix"
+                                                       formControlName="timeInPlacement">
+                                                0 - 6 months
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline pl-2">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="timeInPlacement" value="sixtotwelve"
-                                                       formControlName="timeInPlacement"> 6 - 12 months
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="timeInPlacement"
+                                                       value="seventotwelve"
+                                                       formControlName="timeInPlacement">
+                                                7 - 12 months
                                             </label>
                                         </div>
                                         <br/>
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="timeInPlacement" value="twelvetoeighteen"
-                                                       formControlName="timeInPlacement"> 12 - 18 months
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="timeInPlacement"
+                                                       value="thirteentoeighteen"
+                                                       formControlName="timeInPlacement">
+                                                13 - 18 months
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="timeInPlacement" value="eighteentotwentyfour"
-                                                       formControlName="timeInPlacement"> 18 - 24 months
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="timeInPlacement"
+                                                       value="nineteentotwentyfour"
+                                                       formControlName="timeInPlacement">
+                                                19 - 24 months
+                                            </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <label class="form-check-label">
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="timeInPlacement"
+                                                       value="morethantwentyfour"
+                                                       formControlName="timeInPlacement">
+                                                More than 24 months
                                             </label>
                                         </div>
                                     </fieldset>
@@ -273,16 +295,32 @@
                                     <fieldset class="form-group">
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="placementsInCare" value="1to4"
-                                                       formControlName="placementsInCare"> &nbsp;1 - 4
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="placementsInCare"
+                                                       value="onetothree"
+                                                       formControlName="placementsInCare">
+                                                &nbsp;1 - 3
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
-                                                       name="placementsInCare" value="5plus"
-                                                       formControlName="placementsInCare"> &nbsp;5 or more
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="placementsInCare"
+                                                       value="fourtosix"
+                                                       formControlName="placementsInCare">
+                                                &nbsp;4 - 6
+                                            </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <label class="form-check-label">
+                                                <input type="radio"
+                                                       class="form-check-input"
+                                                       name="placementsInCare"
+                                                       value="morethansix"
+                                                       formControlName="placementsInCare">
+                                                &nbsp;More than 6
                                             </label>
                                         </div>
                                     </fieldset>
@@ -334,16 +372,6 @@
                             </div> <!-- form-row -->
                             <hr/>
                             <div class="row">
-                                <div class="col-12">
-                                    <label for="placementandsafety.howConnectionsUsed">
-                                        How will these connections be used for your permanency plan?</label>
-                                    <textarea type="text" class="form-control" rows="3"
-                                              id="placementandsafety.howConnectionsUsed" formControlName="howConnectionsUsed"
-                                              placeholder="How connections used?"></textarea>
-                                </div>
-                            </div> <!-- form-row -->
-                            <hr/>
-                            <div class="row">
                                 <div class="col-12 col-md-6">
                                     <label class="col-form-label">
                                         Do you maintain contact with his/her biological family?</label>
@@ -386,27 +414,6 @@
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
-                            <div class="row">
-                                <div class="col-12">
-                                    <label for="placementandsafety.positivePlacementExperiences">
-                                        Any additional information about your foster care experience:</label>
-                                    <textarea type="text" class="form-control" rows="3"
-                                              id="placementandsafety.additionalFosterCareInfo"
-                                              formControlName="additionalFosterCareInfo"
-                                              placeholder="Additional Foster Care Info"></textarea>
-                                </div>
-                            </div> <!-- form-row -->
-                            <hr/>
-                            <div class="row">
-                                <div class="col-12">
-                                    <label for="placementandsafety.positivePlacementExperiences">
-                                        Any additional information about your foster care experience:</label>
-                                    <textarea type="text" class="form-control" rows="3"
-                                              id="placementandsafety.additionalFosterCareInfo"
-                                              formControlName="additionalFosterCareInfo"
-                                              placeholder="Additional Foster Care Info"></textarea>
-                                </div>
-                            </div> <!-- form-row -->
                             <hr/>
                             <div class="row">
                                 <div class="col-12">
@@ -414,7 +421,7 @@
                                         <label>List the names and contact information of the individuals the you plan to maintain contact with.  </label>
                                         <thead>
                                         <tr>
-                                            <th><button>Add Line</button></th>
+                                            <th><button>Add Person</button></th>
                                             <th>Name</th>
                                             <th>Relationship</th>
                                             <th>Phone</th>
@@ -481,6 +488,50 @@
                                         </tr>
                                         </tbody>
                                     </table>                                </div>
+                            </div> <!-- form-row -->
+                            <hr/>
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <label class="col-form-label">
+                                        Do you identify with any of the above people as a mentor? </label>
+                                    <fieldset class="form-group">
+                                        <div class="form-check form-check-inline">
+                                            <label class="form-check-label">
+                                                <input type="radio" class="form-check-input"
+                                                       name="idmentor" value="yes"
+                                                       formControlName="idmentor">
+                                                &nbsp;Yes
+                                            </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <label class="form-check-label">
+                                                <input type="radio" class="form-check-input"
+                                                       name="idmentor" value="no"
+                                                       formControlName="idmentor">
+                                                &nbsp;No
+                                            </label>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <label for="placementandsafety.mentorname">
+                                        If yes, who?</label>
+                                    <input type="tel" class="form-control"
+                                           id="placementandsafety.mentorname"
+                                           formControlName="mentorname"
+                                           placeholder="Name">
+                                </div>
+                            </div> <!-- form-row -->
+                            <hr/>
+                            <div class="row">
+                                <div class="col-12">
+                                    <label for="placementandsafety.positivePlacementExperiences">
+                                        Any additional information about your foster care experience:</label>
+                                    <textarea type="text" class="form-control" rows="3"
+                                              id="placementandsafety.additionalFosterCareInfo"
+                                              formControlName="additionalFosterCareInfo"
+                                              placeholder="Additional Foster Care Info"></textarea>
+                                </div>
                             </div> <!-- form-row -->
                             <hr/>
 
