--- a/youthtransition/pages/ya-socialinterests.html
+++ b/youthtransition/pages/ya-socialinterests.html
@@ -251,10 +251,6 @@
                                     </fieldset>
                                 </div>
                                 <div class="col-12 col-md-6 pt-2 pt-md-0">
-                                    <label for="socialinterests.listActivities">If Yes, list:</label>
-                                    <textarea type="tel" class="form-control" id="socialinterests.listActivities"
-                                           placeholder="List your activities"
-                                              formControlName="listActivities" rows="3"></textarea>
                                 </div>
                             </div> <!-- form-row -->
                             <hr/>
@@ -438,11 +434,13 @@
 
                             <div class="row">
                                 <div class="col-12 col-md-6">
-                                    <label class="col-form-label">Do you have hobbies or other interests?</label>
+                                    <label class="col-form-label">
+                                        Are you involved in hobbies or clubs?</label>
                                     <fieldset class="form-group">
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
-                                                <input type="radio" class="form-check-input"
+                                                <input type="radio"
+                                                       class="form-check-input"
                                                        name="hobbies" value="yes"
                                                        formControlName="hobbies">
                                                 &nbsp;Yes
